build_err_now.txt
[DEBUG build_start] Build function started (session: A)
[DEBUG target_optimize_setup] Target and optimize options set (session: A)
[DEBUG build_complete] Build function completed successfully (session: A)
install
+- install nyon_game
   +- compile exe nyon_game Debug native 8 errors
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\Io\Writer.zig:1792:5: error: invalid format string 's' for type 'comptime_int'
    @compileError("invalid format string '" ++ fmt ++ "' for type '" ++ @typeName(@TypeOf(value)) ++ "'");
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    printValue__anon_57996: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\Io\Writer.zig:1151:40
    print__anon_55117: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\Io\Writer.zig:703:25
    10 reference(s) hidden; use '-freference-trace=12' to see all references
src\engine.zig:349:30: error: root source file struct 'raylib_stub' has no member named 'enableCursor'
    pub const enable = raylib.enableCursor;
                       ~~~~~~^~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\engine.zig:367:35: error: root source file struct 'raylib_stub' has no member named 'beginMode3D'
    pub const beginMode3D = raylib.beginMode3D;
                            ~~~~~~^~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\engine.zig:391:32: error: root source file struct 'raylib_stub' has no member named 'drawLine'
    pub const drawLine = raylib.drawLine;
                         ~~~~~~^~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\engine.zig:401:35: error: root source file struct 'raylib_stub' has no member named 'drawCircleV'
    pub const drawCircleV = raylib.drawCircleV;
                            ~~~~~~^~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\engine.zig:419:44: error: root source file struct 'raylib_stub' has no member named 'drawRectangleRounded'
    pub const drawRectangleRounded = raylib.drawRectangleRounded;
                                     ~~~~~~^~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\ui\shared_ui.zig:130:52: error: expected type 'u8', found 'i32'
        ui_state.config.opacity = common.Cast.toInt(i32, clamped);
                                  ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
src\ui\shared_ui.zig:130:52: note: unsigned 8-bit int cannot represent all possible signed 32-bit values
src\ui\ui.zig:420:60: error: expected type 'c_int', found 'f32'
        Shapes.drawRectangleLinesEx(handle_rect, self.style.border_width, self.style.panel_border);
                                                 ~~~~~~~~~~^~~~~~~~~~~~~
src\raylib_stub.zig:127:63: note: parameter type declared here
pub extern fn drawRectangleLinesEx(rec: Rectangle, lineThick: c_int, color: Color) void;
                                                              ^~~~~
error: 8 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\main.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_game --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\" --listen=-

install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 3 errors
src\editor\main_editor_tui.zig:72:38: error: member function expected 2 argument(s), found 1
            editor.tui_command_buffer.appendSlice(history_cmd) catch return;
            ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\array_list.zig:973:13: note: function declared here
        pub fn appendSlice(self: *Self, gpa: Allocator, items: []const T) Allocator.Error!void {
        ~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    handleInput: src\editor\main_editor.zig:340:48
    main: src\editor.zig:54:31
    4 reference(s) hidden; use '-freference-trace=6' to see all references
src\editor\main_editor_tui.zig:102:31: error: member function expected 2 argument(s), found 1
    editor.tui_command_history.append(cmd_copy) catch {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\array_list.zig:893:13: note: function declared here
        pub fn append(self: *Self, gpa: Allocator, item: T) Allocator.Error!void {
        ~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\physics\ecs_integration.zig:161:13: error: no field or member function named 'build' in '@typeInfo(@typeInfo(@TypeOf(ecs.query.QueryBuilder.with__anon_55429)).@"fn".return_type.?).error_union.error_set!*ecs.query.QueryBuilder'
            .build();
            ^~~~~~
src\physics\ecs_integration.zig:161:13: note: consider using 'try', 'catch', or 'if'
error: 3 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\" --listen=-

Build Summary: 0/5 steps succeeded (2 failed)
install transitive failure
+- install nyon_game transitive failure
|  +- compile exe nyon_game Debug native 8 errors
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 3 errors

error: the following build command failed with exit code 1:
.zig-cache\o\92f2af8c2753723feeadd90abb19e800\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0x7f12a6a4 -Zbface306ef10a380
